tests/errors/validation/init-inside-namespace.fn
---
Description: Constructor inside a namespace, with usage
Expected: FN2000, FN3202
---

namespace BadNs
{
    init()
    {
    }
}

type Program
{
    static fn Main -> i32
    {
        var x = BadNs()
        return 0
    }
}
